Allow loading stored files during rename
